 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.10rc1

 - [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
 - [ZBX-3244] fixed dropdown changes its style when navigating menu (sanja)
 - [ZBX-4015] fixed multiple XSS issues (pavels)
 - [ZBX-4288] fixed user macro deleting when deleting a host (pavels)
 - [ZBX-2859] fixed possibility to successfully delete zero regular expressions (sanja)
 - [ZBX-2843] made dashboard and slideshow popup menus have dynamic width (sanja)
 - [ZBX-4279] added an error message when trying to delete an item, that's being used as a min/max Y axis value for graphs (pavels)
 - [ZBX-4375] updated Russian translation; thanks to Alexey Pustovalov (Richlv)
 - [ZBX-4360] fixed trapper compilation error on FreeBSD 7.3 (dimir,asaveljevs)
 - [ZBX-4249] fixed trigger wizard when inserting macro multiple times (Vedmak)
 - [ZBX-4351] updated French translation; thanks to Joseph Bueno (Richlv)
 - [ZBX-4353] updated Japanese translation; thanks to Kodai Terashima (Richlv)

Changes for 1.8.9

1.8.9rc2 was released as 1.8.9 without any changes

Changes for 1.8.9rc2

 - [ZBX-4352] fixed template linking when mass updating hosts (pavels,Vedmak)

Changes for 1.8.9rc1

 - [ZBX-4325] fixed maintenance periods saved with nonzero seconds (asaveljevs,Vedmak)
 - [ZBX-4345] fixed counting of recursive dependency levels for triggers (asaveljevs)
 - [ZBX-4027] fixed floating-point comparison and unified epsilon in trigger functions and expressions (asaveljevs)
 - [ZBX-3551] fixed image XML export for Postgres (pavels)
 - [ZBX-3625] fixed validation of aggregated item keys (Sasha)
 - [ZBX-3117] fixed error notification when unsuccessfully copying a graph (pavels)