@@ -30,29 +30,27 @@ extern unsigned char	process_type;
 
 /******************************************************************************
  *                                                                            *
- * Function: housekeeping_process_log                                         *
+ * Function: housekeeping_cleanup                                             *
  *                                                                            *
- * Purpose: process table 'housekeeper' and remove data if required           *
+ * Purpose: remove deleted items data                                         *
  *                                                                            *
- * Return value: SUCCEED - information removed successfully                   *
- *               FAIL - otherwise                                             *
+ * Return value: number of rows deleted                                       *
  *                                                                            *
  * Author: Alexei Vladishev, Dmitry Borovikov                                 *
  *                                                                            *
  * Comments: sqlite3 does not use CONFIG_MAX_HOUSEKEEPER_DELETE, deletes all  *
  *                                                                            *
  ******************************************************************************/
-static int	housekeeping_process_log()
+static int	housekeeping_cleanup()
 {
-	const char	*__function_name = "housekeeping_process_log";
+	const char	*__function_name = "housekeeping_cleanup";
 	DB_HOUSEKEEPER	housekeeper;
 	DB_RESULT	result;
 	DB_ROW		row;
-	int		deleted;
+	int		d, deleted = 0;
 	char		*sql = NULL;
 	size_t		sql_alloc = 512, sql_offset = 0;
 	zbx_uint64_t	*ids = NULL;
-	int		ids_alloc = 0, ids_num = 0;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -71,7 +69,7 @@ static int	housekeeping_process_log()
 
 		if (0 == CONFIG_MAX_HOUSEKEEPER_DELETE)
 		{
-			deleted = DBexecute(
+			d = DBexecute(
 					"delete from %s"
 					" where %s=" ZBX_FS_UI64,
 					housekeeper.tablename,
@@ -81,7 +79,7 @@ static int	housekeeping_process_log()
 		else
 		{
 #if defined(HAVE_IBM_DB2) || defined(HAVE_ORACLE)
-			deleted = DBexecute(
+			d = DBexecute(
 					"delete from %s"
 					" where %s=" ZBX_FS_UI64
 						" and rownum<=%d",
@@ -90,7 +88,7 @@ static int	housekeeping_process_log()
 					housekeeper.value,
 					CONFIG_MAX_HOUSEKEEPER_DELETE);
 #elif defined(HAVE_MYSQL)
-			deleted = DBexecute(
+			d = DBexecute(
 					"delete from %s"
 					" where %s=" ZBX_FS_UI64 " limit %d",
 					housekeeper.tablename,
@@ -103,7 +101,7 @@ static int	housekeeping_process_log()
 			/* PostgreSQL array constructors are available since version 7.4 */
 			if (70400 > ZBX_PG_SVERSION)
 			{
-				deleted = DBexecute(
+				d = DBexecute(
 						"delete from %s"
 						" where %s=" ZBX_FS_UI64
 							" and clock in (select clock from %s"
@@ -118,7 +116,7 @@ static int	housekeeping_process_log()
 			}
 			else
 			{
-				deleted = DBexecute(
+				d = DBexecute(
 						"delete from %s"
 						" where ctid = any(array(select ctid from %s"
 							" where %s=" ZBX_FS_UI64 " limit %d))",
@@ -129,18 +127,14 @@ static int	housekeeping_process_log()
 						CONFIG_MAX_HOUSEKEEPER_DELETE);
 			}
 #elif defined(HAVE_SQLITE3)
-			deleted = 0;
+			d = 0;
 #endif
 		}
 
-		if (0 == deleted || 0 == CONFIG_MAX_HOUSEKEEPER_DELETE || CONFIG_MAX_HOUSEKEEPER_DELETE > deleted)
+		if (0 == d || 0 == CONFIG_MAX_HOUSEKEEPER_DELETE || CONFIG_MAX_HOUSEKEEPER_DELETE > d)
 			uint64_array_add(&ids, &ids_alloc, &ids_num, housekeeper.housekeeperid, 64);
 
-		if (0 < deleted)
-		{
-			zabbix_log(LOG_LEVEL_DEBUG, "deleted %d records from table '%s'",
-					deleted, housekeeper.tablename);
-		}
+		deleted += d;
 	}
 	DBfree_result(result);
 
@@ -157,9 +151,9 @@ static int	housekeeping_process_log()
 		zbx_free(ids);
 	}
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():SUCCEED", __function_name);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, deleted);
 
-	return SUCCEED;
+	return deleted;
 }
 
 static int	housekeeping_sessions(int now)
@@ -171,17 +165,15 @@ static int	housekeeping_sessions(int now)
 
 	deleted = DBexecute("delete from sessions where lastaccess<%d", now - SEC_PER_YEAR);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "deleted %d records from table 'sessions'", deleted);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, deleted);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():SUCCEED", __function_name);
-
-	return SUCCEED;
+	return deleted;
 }
 
 static void	housekeeping_alerts(int now)
 {
 	const char	*__function_name = "housekeeping_alerts";
-	int		deleted, alert_history;
+	int		deleted = 0, alert_history;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() now:%d", __function_name, now);
 
@@ -189,13 +181,15 @@ static void	housekeeping_alerts(int now)
 			now - *(int *)DCconfig_get_config_data(&alert_history, CONFIG_ALERT_HISTORY) * SEC_PER_DAY);
 	zabbix_log(LOG_LEVEL_DEBUG, "deleted %d records from table 'alerts'", deleted);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, deleted);
+
+	return deleted;
 }
 
 static void	housekeeping_events(int now)
 {
 	const char	*__function_name = "housekeeping_events";
-	int		event_history;
+	int		event_history, deleted = 0;
 	DB_RESULT	result;
 	DB_ROW		row;
 	zbx_uint64_t	eventid;
@@ -210,11 +204,13 @@ static void	housekeeping_events(int now)
 		ZBX_STR2UINT64(eventid, row[0]);
 
 		DBexecute("delete from acknowledges where eventid=" ZBX_FS_UI64, eventid);
-		DBexecute("delete from events where eventid=" ZBX_FS_UI64, eventid);
+		deleted = DBexecute("delete from events where eventid=" ZBX_FS_UI64, eventid);
 	}
 	DBfree_result(result);
 
-	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
+	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%d", __function_name, deleted);
+
+	return deleted;
 }
 
 /******************************************************************************
@@ -311,43 +307,35 @@ static int	housekeeping_history_and_trends(int now)
 
 void	main_housekeeper_loop()
 {
-	int	d, now;
+	int	now, d_history_and_trends, d_clenup, d_events, d_alerts, d_sessions;
 
 	for (;;)
 	{
-		zabbix_log(LOG_LEVEL_WARNING, "Executing housekeeper");
+		zabbix_log(LOG_LEVEL_WARNING, "executing housekeeper");
 		now = time(NULL);
 
 		zbx_setproctitle("%s [connecting to the database]", get_process_type_string(process_type));
 
 		DBconnect(ZBX_DB_CONNECT_NORMAL);
 
-/* Transaction is not required here. It causes timeouts under MySQL. */
-/*		DBbegin();*/
+		zbx_setproctitle("%s [removing old history and trends]", get_process_type_string(process_type));
+		d_history_and_trends = housekeeping_history_and_trends(now);
 
-		zbx_setproctitle("%s [removing old history]", get_process_type_string(process_type));
-
-		d = housekeeping_history_and_trends(now);
-		zabbix_log(LOG_LEVEL_WARNING, "Deleted %d records from history and trends", d);
-
-		zbx_setproctitle("%s [removing old history]", get_process_type_string(process_type));
-
-		housekeeping_process_log(now);
+		zbx_setproctitle("%s [removing deleted items data]", get_process_type_string(process_type));
+		d_clenup = housekeeping_cleanup(now);
 
 		zbx_setproctitle("%s [removing old events]", get_process_type_string(process_type));
-
-		housekeeping_events(now);
+		d_events = housekeeping_events(now);
 
 		zbx_setproctitle("%s [removing old alerts]", get_process_type_string(process_type));
-
-		housekeeping_alerts(now);
+		d_alerts = housekeeping_alerts(now);
 
 		zbx_setproctitle("%s [removing old sessions]", get_process_type_string(process_type));
+		d_sessions = housekeeping_sessions(now);
 
-		housekeeping_sessions(now);
-
-/* Transaction is not required here. It causes timeouts under MySQL. */
-/*		DBcommit();*/
+		zabbix_log(LOG_LEVEL_WARNING, "housekeeper deleted: %d records from history and trends,"
+				" %d records of deleted items, %d events, %d alerts, %d sessions",
+				d_history_and_trends, d_clenup, d_events, d_alerts, d_sessions);
 
 		DBclose();
 
